# zeka

./: pyproject.toml
tests/: test_zeka.py  test_zet.py
zeka/: __main__.py
zet/: __main__.py
