[tool.poetry]
name = "zet"
version = "0.1.0"
description = ""
authors = ["Alexander Shern <alexandershern@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
randomname = "^0.2.1"

[tool.poetry.scripts]
zet = 'zet.__main__:main'

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
